# ModularAudioEffect

./: .clang-tidy  .clangformat  .gitignore  CMakeLists.txt  dependencies.yaml
cmake/: fetch_dependencies.cmake
src/: main.cpp  project_info.h.in
src/audio/: CMakeLists.txt  audio_client.h  audio_client_portaudio.cpp  audio_client_portaudio.h  main.cpp  main.h
src/blocks/: CMakeLists.txt  adder.cpp  adder.h  block.cpp  block.h  block_system.cpp  block_system.h  blocks.h  composite_block.cpp  composite_block.h  core.h  delay.cpp  delay.h  evaluation_sequence.cpp  evaluation_sequence.h  exceptions.h  gain.cpp  gain.h  process_block.cpp  process_block.h  processing_block.h  shift_register.cpp  shift_register.h  single_process_block.cpp  single_process_block.h  splitter.cpp  splitter.h
src/blocks/processes/: delay.cpp  delay.h  gain.h  process.h  shift_register.h
test/: CMakeLists.txt  test_blocks.cpp  test_graphs.cpp  utils.h
utils/: cpptouch.sh  run_clang_tidy.sh
